samples/_failures_safe/1761786532_34bde5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42a44211.c: In function ‘main’:
./samples/SAFE/__tmp_42a44211.c:153:25: error: expected ‘)’ at end of input
  153 |     add_edge(&g, 1, 3, 5
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_42a44211.c:153:5: error: expected declaration or statement at end of input
  153 |     add_edge(&g, 1, 3, 5
      |     ^~~~~~~~
